# bazel-examples

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Main.c  WORKSPACE  doc.rst  main.py  output_groups.cquery  print.bzl  readme.rst  reference.txt  ruff.bzl  run.py  symbolic.bzl  touch.sh
Parameters/: BUILD.bazel  Codegen.bzl  Generate.py  Parameters.json
config/: BUILD.bazel  run.py
factory/: BUILD.bazel  base.json  factory.bzl
lint/: BUILD.bazel  lint.bzl
lint/exemplar/: ugly.py
toolchain/: BUILD.bazel  cc.bzl  toolchain.bzl
