load(":toolchain.bzl", "pep8_toolchain")
load(":cc.bzl", "cc_toolchain_config")


package(default_visibility = ["//visibility:public"])

# # `Ruff` toolchain to check `pep8`

toolchain_type(name = "toolchain_type")

pep8_toolchain(
    name = "ruff",
    tool = "@bin//:Ruff",
)

toolchain(
    name = "ruff_toolchain",
    toolchain = ":ruff",
    toolchain_type = ":toolchain_type",
)

# # CC Toolchain
# With system `gcc` and a minimal set of features.
filegroup(name = "empty")

cc_toolchain_suite(
    name = "cc",
    toolchains = {
        "k8": ":k8_toolchain",
    },
)

cc_toolchain(
    name = "k8_toolchain",
    toolchain_identifier = "k8-toolchain",
    toolchain_config = ":k8_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

cc_toolchain_config(
    name = "k8_toolchain_config",
)
